--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
         <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
     	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
+        <style type='text/css'>
+        	body { max-width: 978px; margin: 15px auto; }
+	    	#output { margin-left: 0; display: none; }
+	    	#output img { height: 20px; width: 20px; vertical-align: top; }
+	    	#error { color: red; font-weight: bold; padding-left: 15px; }
+	    	.alert { margin-top: 15px; display: none; }
+	    	.form-horizontal .controls { position:relative; top:5px; }​
+    	</style>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
